grid gap instead of margin fixed

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -4,5 +4,5 @@
 
 body {
   display: grid;
-  grid-gap: 50px;
+  grid-gap: $row-gap;
 }
